Media: Don't suspend streaming media on Desktop.

Streaming media is always resumed at time 0, but live transcoding
servers (eg. Plex) do not expect this.

BUG=622313

Review-Url: https://codereview.chromium.org/2511573002
Cr-Commit-Position: refs/heads/master@{#432690}

Former-commit-id: aaff1a65fbb4002879616c1657282c07c77c9e75